# Shildt_examples

g10/inventary_example/: Makefile  main.cpp  readmy.txt  ruconsole.h
g10/time_struct/: Makefile  main.cpp  month.h
g11/simple_class/: Makefile  main.cpp  rusinconsole.h  simple_queue.cpp  simple_queue.h
g12/constructorOverloading/: main.cpp  timer.cpp
g12/friendfunction/: main.cpp
g12/friendfunction2/: main.cpp
g12/friendfunction3/: main.cpp
g13/operators_overloading/: main.c++  str_type.c++  str_type.h
g13/sample/: main.cpp
g14/: access.cpp  access.cpp.bak  main.cpp  vehicles1.cpp
g15/: CMakeLists.txt
g15/src/: main.cpp
g15/src/heders/: base_class.h
g16/: CMakeLists.txt
g16/src/: main.cpp
g16/src/heders/: template_func.hpp  template_queue.hpp
g17/: CMakeLists.txt
g17/src/: main.cpp
g17/src/heders/: heder1.hpp
g18/: CMakeLists.txt
g18/data/: test2.txt  test_put.txt
g18/src/: main.cpp  str_type.cpp  three_d.cpp
g18/src/heders/: MyFileIO.hpp  mymanip.hpp  mymanip.hpp.bak  oldtests.hpp  str_type.hpp  three_d.hpp
g19/RTTI/: CMakeLists.txt
g19/RTTI/src/: main.cpp  main.cpp.bak
g19/RTTI/src/heders/: figure.hpp  figure_template.hpp  myclass.hpp
g19/const_cast/: CMakeLists.txt
g19/const_cast/src/: main.cpp  main.cpp.bak
g19/dynamic_cast/: CMakeLists.txt.bak
g19/dynamic_cast/src/: main.cpp  main.cpp.bak
g20/NamespaceTest1/: CMakeLists.txt
g20/NamespaceTest1/src/: main.cpp  main.cpp.bak
g20/UsingTest1/: CMakeLists.txt
g20/UsingTest1/src/: main.cpp  main.cpp.bak  two.cpp  two.cpp.bak
g20/UsingTest1/src/heders/: test_heder.hpp  test_heder.hpp.bak
g20/conversion_functions/src/: main.cpp  main.cpp.bak
g20/pointers_to_functions/src/: main.cpp  main.cpp.bak
g20/pointers_to_members/src/: main.cpp.bak
g20/staticMembers/: CMakeLists.txt.bak
g20/staticMembers/src/: main.cpp  main.cpp.bak
g21/algorithm/src/: main.cpp  main.cpp.bak
g21/list/VS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.sln  main.vcxproj  main.vcxproj.filters
g21/list/src/: main.cpp  main.cpp.bak
g21/map/src/: main.cpp  main.cpp.bak
g21/string/src/: main.cpp  main.cpp.bak
g21/vector/src/: main.cpp  main.cpp.bak
g22/preprocessor/src/: main.cpp  main.cpp.bak
g22/template/src/: main.cpp
g4/: main.cpp
g9/disp_binary/: Makefile  main.cpp
g9/register_var/: main.cpp
g9/two_files_program/: Makefile  Makefile_good  brocken_Makefile  one.cpp  two.cpp
my/FileIO/FileExistTest/src/: main.cpp  main.cpp.bak
my/FileIO/LoginSystem/: ридми.txt
my/FileIO/LoginSystem/src/: main.cpp  main.cpp.bak
my/bytearry2/: main.cpp
my/template/: CMakeLists.txt
my/template/src/: main.cpp.bak
